--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
   line-height: 1.5;
   color: #666666;
   text-align: left;
-  background-color: #f1f3ff;
+  background-color: #ACD2D8;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -2380,7 +2380,7 @@ textarea.form-control {
   text-align: center;
   vertical-align: middle;
   user-select: none;
-  background-color: transparent;
+  background-color: #ACD2D8;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
