--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
-  --light: #f1f3ff;
+  --light: #ACD2D8;/*(changed to light teal) */
   --dark: #3B747D;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
