--- a/css/style.css
+++ b/css/style.css
@@ -5763,7 +5763,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #2A3D45 !important;
+  background-color: #3B747D !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
