--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ mark,
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #f1f3ff;
-  border: 1px solid #dee2e6;
+  border: 1px solid #ACD2D8;
   max-width: 100%;
   height: auto;
 }
@@ -3662,7 +3662,7 @@ input[type=button].btn-block {
   height: 0.5rem;
   color: transparent;
   cursor: pointer;
-  background-color: #dee2e6;
+  background-color: #ACD2D8;
   border-color: transparent;
 }
 .custom-range::-moz-range-thumb {
@@ -3686,7 +3686,7 @@ input[type=button].btn-block {
   height: 0.5rem;
   color: transparent;
   cursor: pointer;
-  background-color: #dee2e6;
+  background-color: #ACD2D8;
   border-color: transparent;
 }
 .custom-range::-ms-thumb {
@@ -3718,11 +3718,11 @@ input[type=button].btn-block {
   border-width: 0.5rem;
 }
 .custom-range::-ms-fill-lower {
-  background-color: #dee2e6;
+  background-color: #ACD2D8;
 }
 .custom-range::-ms-fill-upper {
   margin-right: 15px;
-  background-color: #dee2e6;
+  background-color: #ACD2D8;
 }
 .custom-range:disabled::-webkit-slider-thumb {
   background-color: #adb5bd;
@@ -3775,7 +3775,7 @@ input[type=button].btn-block {
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 1px solid #ACD2D8;
 }
 .nav-tabs .nav-item {
   margin-bottom: -1px;
@@ -3784,7 +3784,7 @@ input[type=button].btn-block {
   border: 1px solid transparent;
 }
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  border-color: #ACD2D8 #ACD2D8 #dee2e6;
+  border-color: #ACD2D8 #ACD2D8 #ACD2D8;
 }
 .nav-tabs .nav-link.disabled {
   color: #6c757d;
@@ -3795,7 +3795,7 @@ input[type=button].btn-block {
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
   background-color: #f1f3ff;
-  border-color: #dee2e6 #dee2e6 #f1f3ff;
+  border-color: #ACD2D8 #ACD2D8 #f1f3ff;
 }
 .nav-tabs .dropdown-menu {
   margin-top: -1px;
@@ -4395,14 +4395,14 @@ input[type=button].btn-block {
   line-height: 1.25;
   color: #2A3D45;
   background-color: #f5e8da;
-  border: 1px solid #dee2e6;
+  border: 1px solid #ACD2D8;
 }
 .page-link:hover {
   z-index: 2;
   color: #172843;
   text-decoration: none;
   background-color: #ACD2D8;
-  border-color: #dee2e6;
+  border-color: #ACD2D8;
 }
 .page-link:focus {
   z-index: 3;
@@ -4424,7 +4424,7 @@ input[type=button].btn-block {
   pointer-events: none;
   cursor: auto;
   background-color: #f5e8da;
-  border-color: #dee2e6;
+  border-color: #ACD2D8;
 }
 
 .pagination-lg .page-link {
@@ -5197,7 +5197,7 @@ a.close.disabled {
   align-items: flex-start;
   justify-content: space-between;
   padding: 1rem 1rem;
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 1px solid #ACD2D8;
 }
 .modal-header .close {
   padding: 1rem 1rem;
@@ -5221,7 +5221,7 @@ a.close.disabled {
   align-items: center;
   justify-content: flex-end;
   padding: 0.75rem;
-  border-top: 1px solid #dee2e6;
+  border-top: 1px solid #ACD2D8;
 }
 .modal-footer > * {
   margin: 0.25rem;
@@ -5851,23 +5851,23 @@ button.bg-dark:focus {
 }
 
 .border {
-  border: 1px solid #dee2e6 !important;
+  border: 1px solid #ACD2D8 !important;
 }
 
 .border-top {
-  border-top: 1px solid #dee2e6 !important;
+  border-top: 1px solid #ACD2D8 !important;
 }
 
 .border-right {
-  border-right: 1px solid #dee2e6 !important;
+  border-right: 1px solid #ACD2D8 !important;
 }
 
 .border-bottom {
-  border-bottom: 1px solid #dee2e6 !important;
+  border-bottom: 1px solid #ACD2D8 !important;
 }
 
 .border-left {
-  border-left: 1px solid #dee2e6 !important;
+  border-left: 1px solid #ACD2D8 !important;
 }
 
 .border-0 {
@@ -9638,7 +9638,7 @@ h3 {
 
   .table-bordered th,
 .table-bordered td {
-    border: 1px solid #dee2e6 !important;
+    border: 1px solid #ACD2D8 !important;
   }
 
   .table-dark {
@@ -9648,12 +9648,12 @@ h3 {
 .table-dark td,
 .table-dark thead th,
 .table-dark tbody + tbody {
-    border-color: #dee2e6;
+    border-color: #ACD2D8;
   }
 
   .table .thead-dark th {
     color: inherit;
-    border-color: #dee2e6;
+    border-color: #ACD2D8;
   }
 }
 /********** Layout Style **********/
