--- a/css/style.css
+++ b/css/style.css
@@ -2594,8 +2594,8 @@ fieldset:disabled a.btn {
 
 .btn-light {
   color: #212529;
-  background-color: #f1f3ff;
-  border-color: #f1f3ff;
+  background-color: #ACD2D8;
+  border-color: #ACD2D8;
 }
 .btn-light:hover {
   color: #212529;
