--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@
 html {
   font-family: sans-serif;
   line-height: 1.15;
+  background-color: #ACD2D8;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
