--- a/css/style.css
+++ b/css/style.css
@@ -9758,7 +9758,7 @@ h3 {
   }
 
   .wrapper .sidebar::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: inset 0 0 6px #ACD2D8;
   }
 
   .wrapper .sidebar::-webkit-scrollbar-thumb {
@@ -9861,6 +9861,7 @@ h3 {
 @media (min-width: 768px) {
   .blog-item h3 {
     margin-left: -90px;
+    background-color: #F5E8DA;
   }
 }
 .skills .progress .progress-bar {
