--- a/css/style.css
+++ b/css/style.css
@@ -5774,7 +5774,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #202C45 !important;
+  background-color: #ACD2D8 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
