--- a/css/style.css
+++ b/css/style.css
@@ -4155,19 +4155,19 @@ input[type=button].btn-block {
 }
 
 .navbar-dark .navbar-brand {
-  color: #f5e8da;
+  color: #2A3D45;
 }
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
-  color: #f5e8da;
+  color: #2A3D45;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  color: #F5E8DA;
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: #F5E8DA;
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
-  color: rgba(255, 255, 255, 0.25);
+  color: #F5E8DA;
 }
 .navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .active > .nav-link,
@@ -4200,7 +4200,7 @@ input[type=button].btn-block {
   word-wrap: break-word;
   background-color: #f5e8da;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid #ACD2D8;
 }
 .card > hr {
   margin-right: 0;
@@ -5774,7 +5774,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #2A3D45 !important;
+  background-color: #3B747D !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
