--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  background-color: #ACD2D8;
 }
 
 @media (min-width: 576px) {
