--- a/css/style.css
+++ b/css/style.css
@@ -3857,6 +3857,7 @@ input[type=button].btn-block {
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap;
+  color: #2A3D45;
 }
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
