--- a/css/style.css
+++ b/css/style.css
@@ -9687,7 +9687,7 @@ h3 {
   width: 100%;
   padding: 15px;
   float: left;
-  background: #f1f3ff;
+  background: #ACD2D8;
 }
 
 .wrapper .sidebar,
