--- a/css/style.css
+++ b/css/style.css
@@ -9715,7 +9715,7 @@ h3 {
     content: "";
     width: 100%;
     height: 30px;
-    background: #f1f3ff;
+    background: #ACD2D8;
     z-index: 9;
   }
 
@@ -9767,7 +9767,7 @@ h3 {
   }
 
   .wrapper .sidebar::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
+    background-color: #ACD2D8;
     outline: 1px solid slategrey;
     border-radius: 7px;
   }
