--- a/css/style.css
+++ b/css/style.css
@@ -4163,12 +4163,14 @@ input[type=button].btn-block {
 }
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
   color: #2A3D45;
+  text-decoration: underline;
 }
 .navbar-dark .navbar-nav .nav-link {
   color: #F5E8DA;
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: #F5E8DA;
+  text-decoration: underline;
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
   color: #F5E8DA;
@@ -4194,6 +4196,7 @@ input[type=button].btn-block {
 }
 .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
   color: #f5e8da;
+  text-decoration: underline;
 }
 
 .card {
