--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #ACD2D8;/*(changed to light teal) */
-  --dark: #3B747D;
+  --dark: #2A3D45;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
