--- a/css/style.css
+++ b/css/style.css
@@ -5789,13 +5789,13 @@ button.bg-secondary:focus {
   background-color: #101622 !important;
 }
 
-.bg-dark{
+.bg-tertiary{
   background-color: #2A3D45 !important;
 }
 
-a.bg-dark:hover, a.bg-dark:focus,
-button.bg-dark:hover,
-button.bg-dark:focus {
+a.bg-tertiary:hover, a.bg-tertiary:focus,
+button.bg-tertiary:hover,
+button.bg-tertiary:focus {
   background-color: #3B747D !important;
 }
 
