minor changes before content

--- a/css/style.css
+++ b/css/style.css
@@ -5790,12 +5790,14 @@ button.bg-secondary:focus {
 }
 
 .bg-tertiary{
+  color: #2A3D45;
   background-color: #2A3D45 !important;
 }
 
 a.bg-tertiary:hover, a.bg-tertiary:focus,
 button.bg-tertiary:hover,
 button.bg-tertiary:focus {
+  color: #2A3D45;
   background-color: #3B747D !important;
 }
 
